# Playwrightwithpython2026

./: CLAUDE.md  conftest.py  pyproject.toml
.github/workflows/: playwright-tests.yml
login_page/: login_page.py
tests/: constants.py  test_first_search.py  test_login_error.py  test_navigation.py  test_nfq_level_dropdown.py
